# Aircraft-libraries

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Makefile  README.md  aircraft.c  aircraft.h  libAircraft.c  mem_manger.c
Hardware_Driver/: BMP180.c  MPU-6050.c  MPU-6050.h  Motors-driver.h  Motors_driver.c  motors_driver.c
Hardware_Driver/Includes/: Motors-driver.h
Includes/: aircraft.h
libraries/MPU6050/Examples/MPU6050_DMP6_Ethernet/: MPU6050_DMP6_Ethernet.ino
mem_manger/: mem_manger.c
